...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">


            <Button
                android:id="@+id/saveMetting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/design_default_color_primary"
                android:paddingStart="8dp"
...
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:prompt="@string/meeting_room"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="@dimen/normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meetingName_TextInputLayout" />

            <TextView
                android:id="@+id/heure_début"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
...
                android:textSize="@dimen/normal"
                app:layout_constraintEnd_toEndOf="@+id/heure_début"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heure_début" />

            <Button
                android:id="@+id/beginTimeEdit_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/begin_hour"
                android:imeOptions="actionDone"
...
                app:layout_constraintBottom_toBottomOf="@+id/heure_début"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/heure_début"
                app:layout_constraintTop_toTopOf="@+id/heure_début" />

            <Button
                android:id="@+id/endTimeEdit_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/finish_hour"
                android:imeOptions="actionDone"
                android:inputType="time"
                android:maxLines="1"
                android:textSize="@dimen/normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/beginTimeEdit_TextView"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <Button
                android:id="@+id/dateEdit_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:ems="10"
                android:hint="@string/meeting_date"
                android:imeOptions="actionDone"
...
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/meetingName_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="@dimen/normal"
                    tools:ignore="LabelFor" />
...
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/participants"
                android:minWidth="32dp"
                app:layout_constraintEnd_toStartOf="@+id/addParticipant_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/spinner">

                <AutoCompleteTextView
                    android:id="@+id/participant_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/normal"
...
